--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Aqui está uma versão aprimorada do site com uma logo profissional, seção de 
                 <a href="#contato" class="font-medium hover:text-secondary transition-colors">Contato</a>
             </nav>
             <button class="md:hidden text-primary">
-                <i class="fas fa-bars text-2xl"></i>
+                <i class="fas fa-bars text-2xl">Login</i>
             </button>
         </div>
     </header>
